--- a/resources/js/Pages/Components/Cart/ModalCart.module.css
+++ b/resources/js/Pages/Components/Cart/ModalCart.module.css
@@ -15,10 +15,6 @@
     align-items: flex-start;
 }
 
-.paymentInfo {
-
-}
-
 .teste {
     display: flex;
     flex-direction: column;
@@ -29,4 +25,8 @@
 .content {
     text-align: center;
     margin-top: 16px;
+}
+
+.receipt {
+
 }
