Ajustes crud endereço, card e nome da categoria com único

--- a/resources/js/Pages/Components/Cart/CardAddress.module.css
+++ b/resources/js/Pages/Components/Cart/CardAddress.module.css
@@ -24,21 +24,26 @@
 
 .actions {
     display: flex;
+    height: 20px;
     justify-content: space-around;
 }
 
 .edit {
     font-size: 20px;
+    color: grey;
 }
 
 .edit:hover {
     font-size: 22px;
+    color: #fca311;
 }
 
 .remove {
     font-size: 20px;
+    color: grey;
 }
 
 .remove:hover {
     font-size: 22px;
+    color: #c1121f;
 }
